--- a/Apps with Compose/LoginPageUIwithCompose/.gitignore
+++ b/Apps with Compose/LoginPageUIwithCompose/.gitignore
@@ -1,15 +1,18 @@
 *.iml
-.gradle
-/local.properties
-/.idea/caches
-/.idea/libraries
-/.idea/modules.xml
-/.idea/workspace.xml
-/.idea/navEditor.xml
-/.idea/assetWizardSettings.xml
-.DS_Store
-/build
-/captures
-.externalNativeBuild
-.cxx
+.gradle/**
+.idea/**
+gradle/**
+build.gradle.kts
+gradle.properties
+gradlew
+gradle
+gradlew.bat
 local.properties
+settings.gradle.kts
+app/build/**
+app/libs/**
+app/.gitignore
+app/build.gradle.kts
+app/proguard-rules.pro
+app/src/androidTest/**
+app/src/test/**
